# gemini-live-mock-server

./: Cargo.toml  README.md  flake.nix
src/: audio.rs  config.rs  lib.rs  main.rs  mock_response.rs  protocol.rs  server.rs  session.rs  vad.rs
