[package]
name = "gemini-live-mock-server"
version = "0.1.0"
edition = "2024"
description = "A mock server for the Gemini Live API"

[lib]
name = "gemini_live_mock_server"
path = "src/lib.rs"

[[bin]]
name = "gemini-live-mock-server"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:tracing-subscriber"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hound = "3.5"
rubato = "0.16"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI-only dependencies
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
